--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 certifi==2019.9.11
 chardet==3.0.4
+charset-normalizer==2.0.4
 Click==7.0
 dnspython==1.16.0
-eventlet==0.31.0
+eventlet==0.30.2
 Flask==1.1.1
 Flask-Session==0.3.1
 Flask-SocketIO==4.2.1
 gevent==1.4.0
 gevent-websocket==0.10.1
 greenlet==0.4.15
-gunicorn==20.0.0
+gunicorn==20.1.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -19,7 +20,7 @@ psycopg2==2.8.4
 python-dotenv==0.10.3
 python-engineio==3.10.0
 python-socketio==4.3.1
-requests==2.22.0
+requests==2.26.0
 six==1.13.0
 SQLAlchemy==1.3.11
 urllib3==1.26.5
