--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,25 @@
-certifi==2019.9.11
-chardet==3.0.4
-charset-normalizer==2.0.4
-Click==7.0
-dnspython==1.16.0
-eventlet==0.30.2
-Flask==1.1.1
-Flask-Session==0.3.1
-Flask-SocketIO==4.2.1
-gevent==1.4.0
-gevent-websocket==0.10.1
-greenlet==0.4.15
+bidict==0.22.0
+cachelib==0.9.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+dnspython==2.2.1
+eventlet==0.33.1
+Flask==2.2.2
+Flask-Session==0.4.0
+Flask-SocketIO==5.3.1
+greenlet==1.1.3
 gunicorn==20.1.0
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-monotonic==1.5
-psycopg2==2.8.4
-python-dotenv==0.10.3
-python-engineio==3.10.0
-python-socketio==4.3.1
-requests==2.26.0
-six==1.13.0
-SQLAlchemy==1.3.11
-urllib3==1.26.5
-Werkzeug==0.16.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+psycopg2==2.9.3
+python-dotenv==0.21.0
+python-engineio==4.3.4
+python-socketio==5.7.1
+requests==2.28.1
+six==1.16.0
+SQLAlchemy==1.4.41
+urllib3==1.26.12
+Werkzeug==2.2.2
