--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-bidict==0.22.0
-cachelib==0.9.0
-certifi==2022.12.7
-charset-normalizer==2.1.1
+bidict==0.22.1
+blinker==1.6.2
+cachelib==0.10.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
-dnspython==2.2.1
-eventlet==0.33.1
+dnspython==2.3.0
+eventlet==0.33.3
 Flask==2.3.2
-Flask-Session==0.4.0
-Flask-SocketIO==5.3.1
-greenlet==1.1.3
+Flask-Session==0.5.0
+Flask-SocketIO==5.3.4
+greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-psycopg2==2.9.3
-python-dotenv==0.21.0
-python-engineio==4.3.4
-python-socketio==5.7.1
-requests==2.28.1
+MarkupSafe==2.1.2
+psycopg2==2.9.6
+python-dotenv==1.0.0
+python-engineio==4.4.1
+python-socketio==5.8.0
+requests==2.30.0
 six==1.16.0
-SQLAlchemy==1.4.41
-urllib3==1.26.12
-Werkzeug==2.2.3
+SQLAlchemy==2.0.13
+typing_extensions==4.5.0
+urllib3==2.0.2
+Werkzeug==2.3.4
+
