--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,27 @@ bidict==0.22.1
 blinker==1.6.2
 cachelib==0.10.2
 certifi==2023.7.22
-charset-normalizer==3.1.0
-click==8.1.3
-dnspython==2.3.0
+charset-normalizer==3.2.0
+click==8.1.7
+dnspython==2.4.2
 eventlet==0.33.3
-Flask==2.3.2
+Flask==2.3.3
 Flask-Session==0.5.0
-Flask-SocketIO==5.3.4
+Flask-SocketIO==5.3.5
 greenlet==2.0.2
-gunicorn==20.1.0
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.2
-psycopg2==2.9.6
+MarkupSafe==2.1.3
+packaging==23.1
+psycopg2==2.9.7
 python-dotenv==1.0.0
-python-engineio==4.4.1
+python-engineio==4.6.1
 python-socketio==5.8.0
-requests==2.30.0
+requests==2.31.0
 six==1.16.0
-SQLAlchemy==2.0.13
-typing_extensions==4.5.0
-urllib3==2.0.2
-Werkzeug==2.3.4
-
+SQLAlchemy==2.0.20
+typing_extensions==4.7.1
+urllib3==2.0.4
+Werkzeug==2.3.7
