--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,31 @@
 bidict==0.22.1
-blinker==1.6.2
+blinker==1.6.3
 cachelib==0.10.2
 certifi==2023.7.22
-charset-normalizer==3.2.0
+charset-normalizer==3.3.0
 click==8.1.7
 dnspython==2.4.2
 eventlet==0.33.3
-Flask==2.3.3
+Flask==3.0.0
 Flask-Session==0.5.0
-Flask-SocketIO==5.3.5
-greenlet==2.0.2
-gunicorn==21.2.0
+Flask-SocketIO==5.3.6
+greenlet==3.0.0
+gunicorn @ https://github.com/benoitc/gunicorn/archive/refs/heads/master.zip
+h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-packaging==23.1
-psycopg2==2.9.7
+packaging==23.2
+psycopg2==2.9.9
 python-dotenv==1.0.0
-python-engineio==4.6.1
-python-socketio==5.8.0
+python-engineio==4.8.0
+python-socketio==5.10.0
 requests==2.31.0
+simple-websocket==1.0.0
 six==1.16.0
-SQLAlchemy==2.0.20
-typing_extensions==4.7.1
+SQLAlchemy==2.0.22
+typing_extensions==4.8.0
 urllib3==2.0.7
-Werkzeug==2.3.7
+Werkzeug==3.0.0
+wsproto==1.2.0
